fix: Update Kupe to 26.1